--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,25 @@
+
 # Govee API Key (get from Govee developer portal)
 GOVEE_API_KEY=your_govee_api_key_here
+
+# Govee Device ID & Model (find in Govee app or API)
+GOVEE_DEVICE_ID=your_govee_device_id
+GOVEE_DEVICE_MODEL=your_govee_model
 
 # Govee Device ID (find in Govee app or API)
 GOVEE_DEVICE_ID=your_govee_device_id_here
 
 # Google Calendar ID (usually your email or 'primary')
-GOOGLE_CALENDAR_ID=primary
+GOOGLE_CALENDAR_ID=<user>@gmail.com
 
 # Path to your Google service account JSON credentials
 GOOGLE_SERVICE_ACCOUNT_JSON=/path/to/your/service_account.json
 
 # How often to check calendar (in seconds)
 REFRESH_INTERVAL=60
+
+# Set to 1 to disable Google Calendar sync and test Govee functions only
+DISABLE_CALENDAR_SYNC=0
+
+# Set to 1 to turn the Govee light off when status is 'available', or 0 to keep it green
+POWER_OFF_WHEN_AVAILABLE=1
