--- a/config/glowstatus_config.json
+++ b/config/glowstatus_config.json
@@ -2,7 +2,7 @@
   "GOVEE_DEVICE_ID": "10:00:D7:C1:83:46:65:8C",
   "GOVEE_DEVICE_MODEL": "H6159",
   "TRAY_ICON": "GlowStatus_tray_tp_tight.png",
-  "SELECTED_CALENDAR_ID": "severswoed@gmail.com",
+  "SELECTED_CALENDAR_ID": "primary",
   "REFRESH_INTERVAL": 60,
   "DISABLE_CALENDAR_SYNC": false,
   "POWER_OFF_WHEN_AVAILABLE": true,
