Auto-disable calendar sync when no OAuth is configured
- Default DISABLE_CALENDAR_SYNC to true for new configurations
- Auto-detect missing client_secret.json and disable sync automatically
- Prepares for future Apple/Microsoft calendar support
- Prevents startup errors when no OAuth provider is configured
- Updates default config file to reflect new behavior

--- a/config/glowstatus_config.json
+++ b/config/glowstatus_config.json
@@ -4,7 +4,7 @@
   "TRAY_ICON": "GlowStatus_tray_tp_tight.png",
   "SELECTED_CALENDAR_ID": "severswoed@gmail.com",
   "REFRESH_INTERVAL": 60,
-  "DISABLE_CALENDAR_SYNC": false,
+  "DISABLE_CALENDAR_SYNC": true,
   "POWER_OFF_WHEN_AVAILABLE": true,
   "OFF_FOR_UNKNOWN_STATUS": true,
   "STATUS_COLOR_MAP": {
