--- a/config/glowstatus_config.json
+++ b/config/glowstatus_config.json
@@ -5,6 +5,7 @@
   "SELECTED_CALENDAR_ID": "severswoed@gmail.com",
   "REFRESH_INTERVAL": 60,
   "DISABLE_CALENDAR_SYNC": true,
+  "DISABLE_LIGHT_CONTROL": true,
   "POWER_OFF_WHEN_AVAILABLE": true,
   "OFF_FOR_UNKNOWN_STATUS": true,
   "STATUS_COLOR_MAP": {
