Bundle OAuth credentials with app - include client_secret.json template and update build process
- Add resources/client_secret.json template to be bundled with app
- Update PyInstaller spec to include resources directory
- Update .gitignore to include bundled OAuth template
- Remove client_secret.json from missing items check
- Improve OAuth error messages
- Ensure tray icon stays visible when config window opens
- Auto-disable calendar sync based on token presence, not client_secret presence

--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,9 @@ govee_temp.json
 auth_token.txt
 google_service_account.json
 *.pickle
-client_secret.json
+# Ignore user-specific OAuth files but not the bundled template
+# resources/client_secret.json  # This line commented out to include bundled version
+google_token.pickle
 
 # Optional
 *.bak
