--- a/glowstatus_config.json
+++ b/glowstatus_config.json
@@ -1,11 +1,11 @@
 {
-  "GOVEE_DEVICE_ID": "10:00:D7:C1:83:46:65:8C",
-  "GOVEE_DEVICE_MODEL": "H6159",
+  "GOVEE_DEVICE_ID": "",
+  "GOVEE_DEVICE_MODEL": "",
   "TRAY_ICON": "GlowStatus_tray_tp_tight.png",
-  "SELECTED_CALENDAR_ID": "severswoed@gmail.com",
+  "SELECTED_CALENDAR_ID": "",
   "REFRESH_INTERVAL": 60,
   "DISABLE_CALENDAR_SYNC": true,
-  "DISABLE_LIGHT_CONTROL": false,
+  "DISABLE_LIGHT_CONTROL": true,
   "POWER_OFF_WHEN_AVAILABLE": true,
   "OFF_FOR_UNKNOWN_STATUS": true,
   "STATUS_COLOR_MAP": {
@@ -25,6 +25,5 @@
       "color": "0,255,0",
       "power_off": true
     }
-  },
-  "CURRENT_STATUS": "available"
+  }
 }
