feat: Add GitHub webhook setup guide and Discord bot integration
- Created WEBHOOK_SETUP.md for detailed instructions on setting up GitHub webhooks for Discord.
- Added requirements for discord.py and aiohttp in requirements.txt.
- Implemented setup script (setup.sh) for quick Discord server configuration.
- Developed setup_discord.py to automate server setup, including roles, channels, and GitHub webhooks.
- Introduced webhooks.json for GitHub webhook configuration.
- Added glowstatus_config.json for GlowStatus application settings.

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,12 @@ google_service_account.json
 resources/client_secret.json  # Ignore real OAuth credentials for security
 google_token.pickle
 
+# Build exclusion backups (temporary directories created during build)
+discord_backup/
+
+# Discord bot active configuration (contains webhook URLs)
+discord/active_webhooks.json
+
 # Optional
 *.bak
 *.tmp
